--- a/themes/custom/light/css/css2.css
+++ b/themes/custom/light/css/css2.css
@@ -89,6 +89,7 @@ header {
 	border-color: #e5e5e5;
 	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
 	background: #ffffff;
+	background-color: #3366CC;
 	color: black !important;
 	margin: 0 auto;
 	position: relative;
