--- a/themes/custom/light/css/css2.css
+++ b/themes/custom/light/css/css2.css
@@ -88,8 +88,8 @@ header {
 	border-bottom-style: solid;
 	border-color: #e5e5e5;
 	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
+	background-color: #ff0000;
 	background: #ffffff;
-	background-color: #3366CC;
 	color: black !important;
 	margin: 0 auto;
 	position: relative;
