--- a/themes/custom/light/css/css2.css
+++ b/themes/custom/light/css/css2.css
@@ -88,7 +88,7 @@ header {
 	border-bottom-style: solid;
 	border-color: #292929;
 	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
-	background: #ffffff;
+	background: #3b3b3b;
 	color: white !important;
 	margin: 0 auto;
 	position: relative;
